
cmake_minimum_required(VERSION 3.13)

add_executable(c01 c01.c)
add_executable(c02 c02.c)
add_executable(c03 c03.c)
add_executable(c04 c04.c)
add_executable(c05 c05.c)
add_executable(c06 c06.c)
add_executable(c07 c07.c)
add_executable(c08 c08.c)
add_executable(c09 c09.c)
add_executable(c10 c10.c)
add_executable(c11 c11.c)
add_executable(c12 c12.c)
add_executable(c13 c13.c)
add_executable(c14 c14.c)
add_executable(c15 c15.c)
add_executable(c16 c16.c)